--- a/BeanCount/Base.lproj/Main.storyboard
+++ b/BeanCount/Base.lproj/Main.storyboard
@@ -468,7 +468,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="UET-1c-jKp"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Create"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.050980392159999999" green="0.36862745099999999" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
